# frontpages

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
src/frontpages/: __init__.py  file_functions.py  image_functions.py  main.py  web_functions.py
