[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "frontpages"
author = "M P Flynn"
author-email = "mpflynnx@gmail.com"
home-page = "https://github.com/mpflynnx/frontpages"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

requires = [
   "click", 
   "beautifulsoup4==4.10.0",
   "exif==1.3.3",
   "openpyxl==3.0.9",
   "pathlib3x==1.3.9",
   "pillow==8.4.0",
   "pyperclip==1.8.2",
   "requests==2.26.0"
]

requires-python=">=3.7"
description-file="README.md"

[tool.flit.scripts]
frontpages = "frontpages:main"

# source:
# https://flit.readthedocs.io/en/latest/pyproject_toml.html#sdist-section
[tool.flit.sdist]
include = ["doc/"]
exclude = [
    "doc/*.html",
    "test/",
    "src/frontpages/*.cscope",
    "src/frontpages/*cscope.*",
    "src/frontpages/tags"]

[tool.commitizen]
version = "0.1.2"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "src/frontpages/__init__.py"
]
